# NearOOm

./: Readme.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/me/nobody/droid/nearoom/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/me/nobody/droid/nearoom/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/me/nobody/droid/nearoom/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
hooklib/: CMakeLists.txt  Readme.md  build.gradle
hooklib/src/androidTest/java/com/test/ems/hook/: ExampleInstrumentedTest.java
hooklib/src/main/: AndroidManifest.xml
hooklib/src/main/cpp/: hookart.cpp  kwai_dlfcn.cpp
hooklib/src/main/java/com/test/ems/hook/: HookArt.java
hooklib/src/test/java/com/test/ems/hook/: ExampleUnitTest.java
